--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.539.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
