--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,23 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^12.0.0",
     "@elevenlabs/react-native": "^0.2.1",
+    "@livekit/react-native": "^2.9.1",
+    "@livekit/react-native-expo-plugin": "^1.0.1",
+    "@livekit/react-native-webrtc": "^137.0.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
+    "livekit-client": "^2.15.4",
     "lucide-react-native": "^0.539.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
@@ -23,8 +29,9 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "tailwindcss": "^3.4.17",
-    "expo-location": "~18.1.6"
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
