--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.17",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "livekit-client": "^2.15.4",
@@ -26,15 +27,16 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-background-timer": "^2.4.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "tailwindcss": "^3.4.17",
-    "expo-dev-client": "~5.2.4"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/node": "^24.2.1",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
