--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "tailwindcss": "^3.4.17",
-    "expo-location": "~18.1.6"
+    "expo-location": "~18.1.6",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
