--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,11 @@
     "@livekit/react-native-webrtc": "^137.0.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
+    "d3": "^5.16.0",
+    "d3-array": "^3.2.4",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "d3-time": "^3.1.0",
     "expo": "~53.0.20",
     "expo-av": "~15.1.7",
     "expo-dev-client": "~5.2.4",
@@ -32,11 +37,12 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/d3": "^7.4.3",
     "@types/node": "^24.2.1",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
